--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "doctor": "npx expo-doctor"
   },
   "jest": {
     "preset": "jest-expo"
@@ -20,7 +21,7 @@
     "@types/styled-components-react-native": "^5.2.5",
     "expo": "~51.0.2",
     "expo-constants": "~16.0.1",
-    "expo-font": "~12.0.4",
+    "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.11",
     "expo-splash-screen": "~0.27.4",
