--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@types/styled-components-react-native": "^5.2.5",
-    "expo": "~51.0.2",
+    "expo": "~51.0.5",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
+    "expo-image-picker": "~15.0.4",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.11",
+    "expo-media-library": "~16.0.3",
+    "expo-router": "~3.5.12",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
@@ -45,7 +48,6 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.0.0",
