--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.4",
     "@types/styled-components-react-native": "^5.2.5",
-    "expo": "~51.0.5",
+    "expo": "~51.0.6",
     "expo-constants": "~16.0.1",
+    "expo-dev-client": "~4.0.13",
     "expo-font": "~12.0.5",
     "expo-image-picker": "~15.0.4",
     "expo-linking": "~6.3.1",
@@ -42,6 +44,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
