--- a/eas.json
+++ b/eas.json
@@ -7,7 +7,9 @@
       "node": "20.13.1",
       "developmentClient": true,
       "distribution": "internal",
-      "autoIncrement": true,
+      "env": {
+        "EXPO_PUBLIC_BUILD_ENV": "dev"
+      },
       "ios": {
         "simulator": true
       },
