--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.4",
     "@types/styled-components-react-native": "^5.2.5",
-    "expo": "~51.0.6",
+    "date-fns": "^3.6.0",
+    "expo": "~51.0.7",
     "expo-build-properties": "~0.12.1",
     "expo-constants": "~16.0.1",
-    "expo-dev-client": "~4.0.13",
+    "expo-dev-client": "~4.0.14",
     "expo-font": "~12.0.5",
-    "expo-image-picker": "~15.0.4",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
     "expo-media-library": "~16.0.3",
     "expo-router": "~3.5.14",
@@ -48,6 +49,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
